# BowlingScoreBoard

./: .clang-format  .clang-tidy  CMakeLists.txt  Doxyfile  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: main.cpp
src/core/: CMakeLists.txt
src/core/inc/: BowlingGame.hpp
src/core/src/: BowlingGame.cpp
src/core/test/: BowlingGameTest.cpp
src/network/: CMakeLists.txt
src/network/inc/: UdpProtocol.hpp  UdpReceiver.hpp
src/network/src/: UdpProtocol.cpp  UdpReceiver.cpp
src/network/test/: UdpProtocolTest.cpp  UdpReceiverTest.cpp
src/ui/: FrameBox.qml  Main.qml
src/viewmodel/: CMakeLists.txt
src/viewmodel/inc/: ScoreboardViewModel.hpp
src/viewmodel/src/: ScoreboardViewModel.cpp
